tests/parser-test-files/bad-files/define-class.16.error
error: Malformed functional dependency
  --> test:4:32
   |
 4 |  (define-class (C :a :b (:a :b ->)))
   |                                  ^ expected one or more type variables
